# jobpilot-ai

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_profile_prefs_sources.py
backend/app/: __init__.py  main.py
backend/app/ai/: base.py  cache.py  factory.py  matching.py  prompts.py  providers.py  rag.py  vector_store.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  admin.py  ai_tools.py  applications.py  auth.py  insights.py  jobs.py  profile.py  resumes.py
backend/app/connectors/: __init__.py  adapters.py  base.py  freeapis.py  rss.py
backend/app/core/: config.py  exceptions.py  logging.py  rate_limit.py  security.py
backend/app/db/: base.py  ensure_schema.py  init_db.py  session.py
backend/app/models/: __init__.py  application.py  document.py  enums.py  job.py  profile.py  system.py  user.py
backend/app/schemas/: application.py  auth.py  common.py  document.py  job.py  profile.py
backend/app/services/: ai_usage.py  application_service.py  auth_service.py  feature_extraction.py  generation.py  job_service.py  matching_service.py  oauth.py  pdf.py  profile_service.py  recommendation_service.py  resume_parser.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_ai_tools.py  test_auth_api.py  test_jobs_api.py  test_matching.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEPLOY_RENDER.md  ER_DIAGRAM.md  ROADMAP.md  schema.sql
frontend/: Dockerfile  next.config.mjs  package.json  tailwind.config.ts
frontend/src/app/: globals.css  (+2 more)
infra/nginx/: nginx.conf
(+16 files in other folders)
