[project]
name = "jobpilot-backend"
version = "0.1.0"
description = "JobPilot AI — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "python-jose[cryptography]>=3.3",
    "argon2-cffi>=23.1",
    "passlib>=1.7",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "authlib>=1.3",                 # OAuth2 clients
    "redis>=5.0",
    "celery>=5.4",
    "chromadb>=0.5",
    "openai>=1.50",
    "anthropic>=0.39",
    "pdfminer.six>=20240706",       # PDF text extraction
    "python-docx>=1.1",             # DOCX parsing
    "reportlab>=4.2",               # PDF generation
    "tenacity>=9.0",
    "structlog>=24.4",
    "email-validator>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "aiosqlite>=0.20",              # in-memory async DB for tests
    "ruff>=0.6",
    "mypy>=1.11",
    "freezegun>=1.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "C4"]
ignore = ["B008"]   # FastAPI Depends() in defaults is idiomatic

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q --cov=app --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
